--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <ul class="nav-list">
                     <li class="active"><a href="index.html">Home</a></li>
                     <li><a href="internships.html">Internships</a></li>
-                    <li><a href="categories.html">Categories</a></li>
+                    <!-- <li><a href="categories.html">Categories</a></li> -->
                     <li><a href="contact.html">Contact Us</a></li>
                     <li><a href="privacy.html">Privacy Policy</a></li>
                 </ul>
@@ -44,7 +44,7 @@
                     <a href="internships.html" class="btn-primary">Browse Internships</a>
                 </div>
                 <div class="hero-image">
-                    <img src="https://via.placeholder.com/500x300" alt="Students working" loading="lazy">
+                    <img src="student.jpg" alt="Students working" loading="lazy">
                 </div>
             </div>
         </section>
@@ -146,7 +146,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="internships.html">Internships</a></li>
-                        <li><a href="categories.html">Categories</a></li>
+                        <!-- <li><a href="categories.html">Categories</a></li> -->
                         <li><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </div>
@@ -155,7 +155,7 @@
                     <ul>
                         <li><a href="privacy.html">Privacy Policy</a></li>
                         <li><a href="terms.html">Terms of Service</a></li>
-                        <li><a href="disclaimer.html">Disclaimer</a></li>
+                        <!-- <li><a href="disclaimer.html">Disclaimer</a></li> -->
                     </ul>
                 </div>
             </div>
