--- a/internships.html
+++ b/internships.html
@@ -27,7 +27,7 @@
                 <ul class="nav-list">
                     <li><a href="index.html">Home</a></li>
                     <li class="active"><a href="internships.html">Internships</a></li>
-                    <li><a href="categories.html">Categories</a></li>
+                    <!-- <li><a href="categories.html">Categories</a></li> -->
                     <li><a href="contact.html">Contact Us</a></li>
                     <li><a href="privacy.html">Privacy Policy</a></li>
                 </ul>
