--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="hero-content">
                     <h1>Find Your Perfect Internship</h1>
                     <p>Explore fresh, verified internship opportunities daily from top platforms like LinkedIn, Internshala, Naukri, and more.</p>
-                    <a href="internships.html" class="btn-primary">Browse Internships</a>
+                    <button><a href="internships.html" class="text">Browse Internships</a></button>
                 </div>
                 <div class="hero-image">
                     <img src="student.jpg" alt="Students working" loading="lazy">
@@ -90,7 +90,10 @@
                             <span><i class="far fa-clock"></i> 2 days ago</span>
                         </div>
                         <p class="description">Work on cutting-edge web applications using React.js and modern frontend technologies.</p>
-                        <a href="#" class="btn-secondary">Apply Now</a>
+                        <button>
+                        <a href="https://www.google.com" class="text">Apply Now</a>
+                      </button>
+
                     </div>
 
                     <div class="internship-card">
@@ -102,7 +105,11 @@
                             <span><i class="far fa-clock"></i> 3 days ago</span>
                         </div>
                         <p class="description">Learn SEO, content marketing, and social media strategies from industry experts.</p>
-                        <a href="#" class="btn-secondary">Apply Now</a>
+                       
+                      <button>
+                        <a href="https://www.google.com" class="text">Apply Now</a>
+                      </button>
+
                     </div>
 
                     <div class="internship-card">
@@ -114,11 +121,14 @@
                             <span><i class="far fa-clock"></i> 5 days ago</span>
                         </div>
                         <p class="description">Create beautiful user interfaces and improve user experiences for our clients.</p>
-                        <a href="#" class="btn-secondary">Apply Now</a>
+                      <button>
+                        <a href="https://www.google.com" class="text">Apply Now</a>
+                      </button>
                     </div>
                 </div>
                 <div class="text-center">
-                    <a href="internships.html" class="btn-primary">View All Internships</a>
+                    <button>
+                    <a href="internships.html" class="text">View All Internships</a></button>
                 </div>
             </div>
         </section>
