--- a/internships.html
+++ b/internships.html
@@ -66,7 +66,8 @@
                             <option value="hyderabad">Hyderabad</option>
                         </select>
                     </div>
-                    <button id="apply-filters" class="btn-secondary">Apply Filters</button>
+                    <button id="apply-filters" class="text">
+                        <a class="text">Apply Filters</a></button>
                 </div>
 
                 <div class="container">
@@ -84,7 +85,10 @@
                             <span><i class="far fa-clock"></i> Today</span>
                         </div>
                         <p class="description">Work on Google's core products and gain experience with large-scale systems. Must know Python, Java, or C++.</p>
-                        <a href="https://careers.google.com" target="_blank" class="btn-secondary">Apply Now</a>
+                       <button>
+                        <a href="https://www.google.com" class="text">Apply Now</a>
+                      </button>
+                    </div>
                     </div>
 
                     <!-- Internship 2 -->
@@ -97,7 +101,9 @@
                             <span><i class="far fa-clock"></i> Today</span>
                         </div>
                         <p class="description">Help manage Amazon's social media presence and create engaging content for various platforms.</p>
-                        <a href="https://www.amazon.jobs" target="_blank" class="btn-secondary">Apply Now</a>
+                        <button>
+                        <a href="https://www.google.com" class="text">Apply Now</a>
+                      </button>
                     </div>
 
                     <!-- Internship 3 -->
@@ -110,7 +116,10 @@
                             <span><i class="far fa-clock"></i> 1 day ago</span>
                         </div>
                         <p class="description">Work with our design team to create intuitive user interfaces for Adobe's creative products.</p>
-                        <a href="https://www.adobe.com/careers.html" target="_blank" class="btn-secondary">Apply Now</a>
+                       <button>
+                        <a href="https://www.google.com" class="text">Apply Now</a>
+                      </button>
+                    </div>
                     </div>
 
                     <!-- Internship 4 -->
@@ -123,7 +132,9 @@
                             <span><i class="far fa-clock"></i> 1 day ago</span>
                         </div>
                         <p class="description">Analyze large datasets and build machine learning models to solve real-world problems.</p>
-                        <a href="https://careers.microsoft.com" target="_blank" class="btn-secondary">Apply Now</a>
+                        <button>
+                        <a href="https://careers.microsoft.com" class="text">Apply Now</a>
+                      </button>
                     </div>
 
                     <!-- Internship 5 -->
@@ -136,7 +147,9 @@
                             <span><i class="far fa-clock"></i> 2 days ago</span>
                         </div>
                         <p class="description">Help identify new business opportunities and partnerships for Uber in the Indian market.</p>
-                        <a href="https://www.uber.com/us/en/careers" target="_blank" class="btn-secondary">Apply Now</a>
+                        <button>
+                        <a href="https://www.uber.com/us/en/careers" class="text">Apply Now</a>
+                      </button>
                     </div>
 
                     <!-- Internship 6 -->
@@ -149,7 +162,8 @@
                             <span><i class="far fa-clock"></i> 2 days ago</span>
                         </div>
                         <p class="description">Develop and optimize backend services for Facebook's platforms using PHP and Hack.</p>
-                        <a href="https://www.facebook.com/careers" target="_blank" class="btn-secondary">Apply Now</a>
+                        <button>
+                        <a href="https://www.facebook.com/careers" target="_blank" class="text">Apply Now</a></button>
                     </div>
 
                     <!-- Internship 7 -->
@@ -162,7 +176,8 @@
                             <span><i class="far fa-clock"></i> 3 days ago</span>
                         </div>
                         <p class="description">Create blog posts, guides, and other content to help businesses grow better.</p>
-                        <a href="https://www.hubspot.com/careers" target="_blank" class="btn-secondary">Apply Now</a>
+                        <button>
+                        <a href="https://www.hubspot.com/careers" target="_blank" class="text">Apply Now</a></button>
                     </div>
 
                     <!-- Internship 8 -->
@@ -175,7 +190,8 @@
                             <span><i class="far fa-clock"></i> 3 days ago</span>
                         </div>
                         <p class="description">Create visual content and templates for Canva's design platform.</p>
-                        <a href="https://www.canva.com/careers" target="_blank" class="btn-secondary">Apply Now</a>
+                        <button>
+                        <a href="https://www.canva.com/careers" target="_blank" class="text">Apply Now</a></button>
                     </div>
 
                     <!-- Internship 9 -->
@@ -188,7 +204,8 @@
                             <span><i class="far fa-clock"></i> 4 days ago</span>
                         </div>
                         <p class="description">Contribute to cutting-edge AI research projects under the guidance of senior researchers.</p>
-                        <a href="https://openai.com/careers" target="_blank" class="btn-secondary">Apply Now</a>
+                        <button>
+                        <a href="https://openai.com/careers" target="_blank" class="text">Apply Now</a></button>
                     </div>
 
                     <!-- Internship 10 -->
@@ -201,7 +218,8 @@
                             <span><i class="far fa-clock"></i> 4 days ago</span>
                         </div>
                         <p class="description">Work on Swiggy's mobile apps using React Native and contribute to features used by millions.</p>
-                        <a href="https://careers.swiggy.com" target="_blank" class="btn-secondary">Apply Now</a>
+                        <button>
+                        <a href="https://careers.swiggy.com" target="_blank" class="text">Apply Now</a></button>
                     </div>
 
                     <!-- Internship 11 -->
@@ -214,7 +232,8 @@
                             <span><i class="far fa-clock"></i> 5 days ago</span>
                         </div>
                         <p class="description">Optimize website content and structure to improve organic search rankings.</p>
-                        <a href="https://www.zomato.com/careers" target="_blank" class="btn-secondary">Apply Now</a>
+                        <button>
+                        <a href="https://www.zomato.com/careers" target="_blank" class="text">Apply Now</a></button>
                     </div>
 
                     <!-- Internship 12 -->
@@ -227,7 +246,8 @@
                             <span><i class="far fa-clock"></i> 5 days ago</span>
                         </div>
                         <p class="description">Assist with financial analysis, reporting, and modeling for various business units.</p>
-                        <a href="https://www.goldmansachs.com/careers" target="_blank" class="btn-secondary">Apply Now</a>
+                        <button>
+                        <a href="https://www.goldmansachs.com/careers" target="_blank" class="text">Apply Now</a></button>
                     </div>
 
                     <!-- Internship 13 -->
@@ -240,7 +260,8 @@
                             <span><i class="far fa-clock"></i> 6 days ago</span>
                         </div>
                         <p class="description">Help maintain and improve Netflix's cloud infrastructure and deployment pipelines.</p>
-                        <a href="https://jobs.netflix.com" target="_blank" class="btn-secondary">Apply Now</a>
+                        <button>
+                        <a href="https://jobs.netflix.com" target="_blank" class="text">Apply Now</a></button>
                     </div>
 
                     <!-- Internship 14 -->
@@ -253,7 +274,8 @@
                             <span><i class="far fa-clock"></i> 6 days ago</span>
                         </div>
                         <p class="description">Design user experiences for Flipkart's e-commerce platform and mobile apps.</p>
-                        <a href="https://www.flipkartcareers.com" target="_blank" class="btn-secondary">Apply Now</a>
+                        <button>
+                        <a href="https://www.flipkartcareers.com" target="_blank" class="text">Apply Now</a></button>
                     </div>
 
                     <!-- Internship 15 -->
@@ -266,7 +288,8 @@
                             <span><i class="far fa-clock"></i> 1 week ago</span>
                         </div>
                         <p class="description">Learn about network security and help identify vulnerabilities in Cisco's products.</p>
-                        <a href="https://jobs.cisco.com" target="_blank" class="btn-secondary">Apply Now</a>
+                        <button>
+                        <a href="https://jobs.cisco.com" target="_blank" class="text">Apply Now</a></button>
                     </div>
                 </div>
 
@@ -299,7 +322,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="internships.html">Internships</a></li>
-                        <!-- <li><a href="categories.html">Categories</a></li> -->
+                        <li><a href="categories.html">Categories</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </div>
@@ -308,7 +331,7 @@
                     <ul>
                         <li><a href="privacy.html">Privacy Policy</a></li>
                         <li><a href="terms.html">Terms of Service</a></li>
-                          <!--<li><a href="disclaimer.html">Disclaimer</a></li> -->
+                        <li><a href="disclaimer.html">Disclaimer</a></li>
                     </ul>
                 </div>
             </div>
