--- a/internships.html
+++ b/internships.html
@@ -322,7 +322,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="internships.html">Internships</a></li>
-                        <li><a href="categories.html">Categories</a></li>
+                        <!-- <li><a href="categories.html">Categories</a></li> -->
                         <li><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </div>
@@ -331,7 +331,7 @@
                     <ul>
                         <li><a href="privacy.html">Privacy Policy</a></li>
                         <li><a href="terms.html">Terms of Service</a></li>
-                        <li><a href="disclaimer.html">Disclaimer</a></li>
+                        <!-- <li><a href="disclaimer.html">Disclaimer</a></li> -->
                     </ul>
                 </div>
             </div>
