--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <nav class="navbar">
                 <div class="logo">
-                    <h1>Daily Internships</h1>
+                    <h1 style="color: blue;">Daily Internships</h1>
                 </div>
                 <div class="menu-toggle" id="mobile-menu">
                     <span></span>
@@ -25,7 +25,7 @@
                     <span></span>
                 </div>
                 <ul class="nav-list">
-                    <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="internships.html">Internships</a></li>
                     <!-- <li><a href="categories.html">Categories</a></li> -->
                     <li><a href="contact.html">Contact Us</a></li>
