--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <nav class="navbar">
                 <div class="logo">
-                    <h1 style="color: blue;">Daily Internships</h1>
+                    <h1 style="color: blue;">InterCareer</h1>
                 </div>
                 <div class="menu-toggle" id="mobile-menu">
                     <span></span>
